<resources>
    <string name="app_name">Mechanic-app</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rating">0.0</string>
    <string name="technician">Mechanic</string>
    <string name="passenger">Passenger</string>
    <string name="client">Client</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Don\'t Remember Password?</string>
    <string name="stuck">Stuck</string>
    <string name="faulty">Faulty</string>
    <string name="service">Service</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_instructions">We just need your registered Email id in order
        to send you password reset instructions</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Dont_have_an_account">Sign up instead?</string>
    <string name="back">&#60;&#60;BACK</string>
    <string name="minimum_password">Password has to be at least 6 characters in length</string>
    <string name="auth_failed">Registration unsuccessful, try again or contact support for help</string>
    <string name="proceed">Once you have verified your email address click the button below or request a verification resend
    if you did not receive any.</string>
    <string name="resend">RESEND</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="emergency">MECHANIC APP</string>
    <string name="directions_api_key">AIzaSyAYxugo52-sjTXt0zlyL2srs_D8nmUkCSk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>
    <string name="phone_sign_in">Sign in with phone</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="number_hint">Enter your phone number</string>
    <string name="web_client_id">765145930121-8htagvs0q08aita42j9as7s2mj88smcf.apps.googleusercontent.com</string>
    <string name="btn_phone_proceed">Verify number</string>
    <string name="verify">Enter the verification code sent to your number below</string>
    <string name="verify_hint">Input code Here</string>
    <string name="verify_sign_in">Verify and Sign In</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_technician_home">TechnicianHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Sign Out</string>
    <string name="call_center">Call center</string>
    <string name="permission_require">location permission required</string>
    <string name="decline">Decline</string>
    <string name="title_activity_call_center">CallCenterActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_call__center">Call_Center</string>
    <string name="title_activity_call_c">CallCActivity</string>
    <string name="title_activity_call_center_home">CallCenterHome</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_call_home">CallHomeActivity</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="token_not_found">Token Not Found</string>
    <string name="Decline_failed">Decline Failed</string>
    <string name="Decline_success">You have declined this request.</string>
    <string name="call_pass">Call passenger</string>
    <string name="call_tech">Call mechanic</string>
    <string name="active_request_channel_name">Active requests channel</string>
    <string name="new_active_request">New Active Request</string>
    <string name="click_to_view_request">Clickto view active requests</string>
    <string name="open_location">Open Location</string>
    <string name="rider_not_found">"Cannot find passenger with key "</string>
    <string name="menu_faults">Faults</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_rating">4.5</string>
    <string name="Accept_failed">Accept failed</string>
    <string name="end_repair">End Repair</string>
    <string name="Complete_failed">Action complete repair failed</string>
    <string name="Complete_success">Mechanic has completed repair session</string>
    <string name="auth_has_failed">Kindly check your details or network connection and try again.</string>
</resources>
