<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_new"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_faults"
            android:icon="@drawable/ic_baseline_build_24"
            android:title="@string/menu_faults"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/logout_new"
            android:title="@string/menu_logout" />
    </group>
</menu>